# rag-retriebot-model-server

./: .env_example  .gitignore  README.md  config.py  llm_model2_homedesk.ipynb  llm_model2_try1.ipynb  llm_routerchain.ipynb  main.py  pyproject.toml  setup.py  test.ipynb
LLM_modelTest/: llm_modeltest1.ipynb  llm_modeltest1.py  llm_modeltest2.ipynb  llm_modeltest3.ipynb  setup_vectorstore1.py
LLM_modelTest/01_VectorDBTest/: llm_dbtest1.ipynb  llm_dbtest2.ipynb  llm_dbtest3.ipynb
LLM_modelTest/02_routerChainTest/: llm_routerchain.ipynb
NLP_modelTest/: modeling_test1.ipynb  modeling_test2.ipynb  modeling_test3.ipynb  modeling_test4.ipynb
api/: default.py  recommend.py
chain/: post_recommend.py  recommend.py  search.py  wrapup.py
functions/: Light_FM.py  add_views.py  check_user_history.py  convert_to_json.py  fetch_movie_details.py  filter_watched_content.py  is_watched.py  make_result.py  page_content_parser.py  string_to_json.py  user_utils.py
preprocessing/: 2기_VOD_2월_전처리.ipynb  KMDB_API.ipynb  NaverMovieCrawling.ipynb  VOD_preprocessing.ipynb  VOD_마트_전처리.ipynb  VOD_시청기록_병합.ipynb  VOD_시청기록_전처리.ipynb  data_4000_preprocess.ipynb  data_check.ipynb  movies_mart_views_compare.ipynb
prompts/: post_recommend_template.yaml  recommend_template.yaml  search_template.yaml  wrapup_response_schema.py  wrapup_template.yaml
tests/: mart_llm_vectordb.ipynb  test.ipynb  view_llm_vectordb.ipynb
