[tool.poetry]
name = "lgdxteam2"
version = "0.1.0"
description = ""
authors = ["kbr_1218 <kbr_uni@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.8.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.9.0.post1"
sentence-transformers = "3.3.0"
konlpy = "^0.6.0"
torch = "^2.5.1"
boto3 = "^1.35.83"
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
onnxruntime = "1.17.1"
sentencepiece = "^0.2.0"
wordcloud = "^1.9.4"
datasets = "^3.2.0"
accelerate = "^1.2.1"
transformers = {extras = ["torch"], version = "^4.47.1"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
