[tool.poetry]
name = "lgdxteam2"
version = "0.1.0"
description = ""
authors = ["kbr_1218 <kbr_uni@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


# 데이터 처리 및 분석 관련 패키지
pandas = "^2.2.3"
datasets = "^3.2.0"
rank-bm25 = "^0.2.2"


# 데이터베이스 및 캐시 관련 패키지
redis = "^5.0.3"
chromadb = "0.5.0"


# 시각화 및 사용자 인터페이스 관련 패키지
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
notebook = "^7.1.2"


# 딥러닝 및 머신러닝 관련 패키지
torch = "^2.2.2"
faiss-cpu = "^1.9.0.post1"
torchvision = "^0.17.2"
open-clip-torch = "^2.24.0"


# 언어 및 자연어 처리 관련 패키지
google-generativeai = "^0.8.3"
konlpy = "^0.6.0"
sentence-transformers = "3.3.0"
onnxruntime = "1.17.1"
sentencepiece = "^0.2.0"
transformers = {extras = ["torch"], version = "^4.26.1"}
langchain = "^0.3"
langchain-core = "^0.3"
langchain-experimental = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
langchain-anthropic = "^0.2"
langchain-text-splitters = "^0.3"
langchain-elasticsearch = "^0.3"
langchain-upstage = "^0.3"
langchain-chroma = "^0.1"
langchain-cohere = "^0.3"
langchain-milvus = "^0.1.1"
langchain-google-genai = "^2.0"
langchain-huggingface = "^0"
langchain-teddynote = "^0.3.9"
langchainhub = "^0.1.15"
langgraph = "^0"
langsmith = "^0.1"
huggingface-hub = "^0.25"
openai = "^1.34"
deepl = "^1.17.0"
kiwipiepy = "^0.17.1"


# 기타 유틸리티 및 필수 패키지
python-dotenv = "^1.0.1"
boto3 = "^1.35.83"
accelerate = "^1.2.1"
pydantic = "^2.7.4"
lxml = "^5.2.2"
pillow = "^10.3.0"
lark = "^1.1.9"
ragas = "^0.1.7"
unstructured = {version = "0.10.19", extras = ["all-docs"]}
arxiv = "^2.1.0"
tiktoken = "^0.7"
tenacity = "8.3.0"
pymilvus = "^2.4.4"
google-search-results = "^2.4.2"
protobuf = ">=3.20.3,<6.0dev"
sqlalchemy = "^2.0.31"
llama-index-core = "^0.10.58"
llama-parse = "^0.4.9"
llama-index-readers-file = "^0.1.30"
flashrank = "^0.2.8"
docx2txt = "^0.8"
nest-asyncio = "^1.6.0"
rapidocr-onnxruntime = "^1.3.24"
grandalf = "^0.8"
rouge-score = "^0.1.2"
langchain-ollama = "^0.2.0"
mypy = "^1.11.2"
selenium = "^4.26.1"
weaviate = "^0.1.2"
ace-tools = "^0.0"
ace-tools-open = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
